--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
             android:layout_weight="6"
             android:contentDescription="@string/app_name"
             android:scaleType="centerCrop"
-            android:src="@drawable/home_bg_3" />
+            android:src="@drawable/home_bg" />
 
         <com.mobsandgeeks.ui.TypefaceTextView
             android:layout_width="match_parent"
